objects/Project__c.object
<CustomObject><fields>
        <fullName>Billable_Amount__c</fullName>
        <label>Billable Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>ProjectRef__c</fullName>
        <externalId>true</externalId>
        <label>ProjectRef</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Running</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Shadow object containing records loaded from an inbound integration with the external PMS. It is a child to Opportunities as the originating source.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Project</label><nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Projects</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Start_Must_Be_Before_End</fullName>
        <active>true</active>
        <description>Ensure that the start date is before the end date.</description>
        <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>Project End Date cannot be before Start Date.</errorMessage>
    </validationRules></CustomObject>